# ml-dsa-flutter

./: .metadata  README.md  pubspec.yaml
.github/workflows/: health.yaml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
example/: .gitignore  Makefile  README.md  pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: integration_test.dart  kat.dart  kat_MLDSA_44_det_pure.dart  kat_MLDSA_65_det_pure.dart  kat_MLDSA_87_det_pure.dart  roundtrip.dart  web.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/kat/: kat_MLDSA_65_det_pure.dart
example/lib/: main.dart  sw.dart  sw_client.dart  web.dart
example/linux/: CMakeLists.txt
example/test/: ml_dsa_test.dart  web.dart
example/web/: index.html  manifest.json  sw.dart.js
example/web_test/: kat.dart  kat_MLDSA_44_det_pure.dart  kat_MLDSA_65_det_pure.dart  kat_MLDSA_87_det_pure.dart  roundtrip.dart
ios/: ml_dsa.podspec
lib/: async.dart  ml_dsa.dart
lib/src/: async.dart  comparison.dart  conversion.dart  entropy.dart  expansion.dart  ml_dsa_base.dart  ntt.dart  polynomials.dart  reduction.dart  sha3_512.dart  shake.dart  zetas.dart
linux/: CMakeLists.txt  ml_dsa_plugin.cc  ml_dsa_plugin_private.h
linux/test/: ml_dsa_plugin_test.cc
macos/: ml_dsa.podspec
macos/Classes/: MlDsaPlugin.swift
modules/keccak/: .metadata  ffigen.yaml
modules/keccak/src/: CMakeLists.txt
modules/keccak/src/KeccakSum/: KeccakHash.c
plugins/keccak/: README.md  ffigen.yaml  pubspec.yaml
(+61 files in other folders)
